task2/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: backend:v1
        ports:
          - name: web
            containerPort: 80
        livenessProbe:
          httpGet:
            port: 80
            path: /
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            port: 80
            path: /health
          initialDelaySeconds: 15
          periodSeconds: 5
